2005-07-07  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (INCLUDES): Add $(top_builddir)/.. to pick up mono's
	config.h.

Thu Jul 7 12:15:22 CEST 2005 Paolo Molaro <lupus@ximian.com>

	* pthread_support.c: fix compilation when TLS_ALLOC is not defined.

Thu Jul 7 11:59:42 CEST 2005 Paolo Molaro <lupus@ximian.com>

	* pthread_support.c, Makefile.am: make the __thread var use
	fast access if available (and avoid dlopen issue, bug #75390).

2005-07-05  Ben Maurer  <bmaurer@ximian.com>

	* pthread_stop_world.c (pthread_start_world, _GC_suspend_handler):
	Make sure that all threads have been started before releasing the
	GC_lock. Otherwise, the thread table can be corrupt in the restart
	handler, causing deadlocks and segfaults.

2005-06-22  Zoltan Varga  <vargaz@freemail.hu>

	* include/private/gcconfig.h: Fix amd64 build.

2005-06-21  Ben Maurer  <bmaurer@ximian.com>

	* configure.host: remove -fexceptions, messes up with nptl
	includes, as on fc4.

2005-06-17  Zoltan Varga  <vargaz@freemail.hu>

	* pthread_support.c: Workaround gcc-3.3 compiler bug.

2005-05-26  Sebastien Pouliot  <sebastien@ximian.com>

	* libgc.vcproj: Project file for libgc.

2005-05-19  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Handle i386-*-linux* as well. Fixes #74960.	

Tue May 3 16:28:26 CEST 2005 Paolo Molaro <lupus@ximian.com>

	* os_dep.c: remove usage of libc private symbol.

2005-05-02  Miguel de Icaza  <miguel@novell.com>

	* pthread_stop_world.c (GC_restart_handler, GC_suspend_handler):
	Wrap the original routines into methods that preserve the value of
	errno.  Fixes #74740

2005-04-18  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Applied another freebsd patch from Bill Middleton (flashdict@gmail.com).

2005-04-15  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Applied another freebsd patch from Bill Middleton (flashdict@gmail.com).

2005-04-11  Zoltan Varga  <vargaz@freemail.hu>

	* include/private/gcconfig.h configure.in os_dep.c dyn_load.c: 